--- a/SandAndStonesLibrary/SandAndStonesLibrary.csproj
+++ b/SandAndStonesLibrary/SandAndStonesLibrary.csproj
@@ -4,6 +4,18 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <RepositoryUrl>https://github.com/sandandstonesdev/SandAndStonesLibrary</RepositoryUrl>
+    <Title>SandAndStonesLibrary</Title>
+    <PackageId>SandAndStones.SandAndStonesLibrary</PackageId>
+    <Version>1.0.0</Version>
+    <Authors>sandandstonesdev</Authors>
+    <Product>SandAndStones.SandAndStonesLibrary</Product>
+    <Company>sandandstonesdev</Company>
+    <Description>Common Library for Engine and Microservices</Description>
+    <Copyright>©2023-2024 Paweł Aksiutowicz</Copyright>
+	<RepositoryType>git</RepositoryType>
+	<IncludeSymbols>true</IncludeSymbols>
   </PropertyGroup>
 
 </Project>
